# xstate-python

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pull_request.yaml  release.yaml
docs/: PRODUCT.md  README.md  comparison.md
docs/concepts/: actors.md  machines-and-implementations.md  persistence.md  runtimes.md  scxml.md
docs/examples/: README.md  async_workflow.py  fetch_with_retry.py  scxml_toggle.py  scxml_toggle.scxml  snapshot_resume.py  traffic_intersection.json  traffic_intersection.py
scripts/: release_preflight.py  validate_distribution.py
src/xstate/: __init__.py  action.py  actor.py  algorithm.py  async_interpreter.py  config_parser.py  context.py  event.py  exceptions.py  guards.py  handlers.py  interpreter.py  machine.py  mermaid.py  scheduler.py  schema.py  scxml.py  setup_api.py  snapshot.py  state.py  state_node.py  transition.py
tests/: conftest.py  test_action_ordering.py  test_actions.py  test_actor.py  test_actor_logic.py  test_actor_messaging.py  test_after.py  test_architecture_refactor.py  test_async_actors.py  test_async_interpreter.py  test_best_practices.py  test_choose_pure.py  test_context.py  test_coverage.py  test_examples.py  test_guards.py  test_history.py  test_history_extended.py  test_interpreter.py  test_invoke.py  test_machine.py  test_mermaid.py  test_modernization.py  test_parallel.py  test_raise_send_cancel.py  test_real_world.py  test_regressions.py  test_scxml.py  test_scxml_import.py  test_setup.py  test_snapshot.py  test_state_in.py  test_state_in_guard.py  test_state_queries.py  test_tags.py  test_v5_config.py
xstate/: __init__.py  action.py  actor.py  algorithm.py  event.py  exceptions.py  interpreter.py  machine.py  scheduler.py  scxml.py  state.py  state_node.py  transition.py
