[project]
name = "xstate"
version = "0.5.0"
description = "Statecharts and state machines for Python, inspired by XState."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "David Khourshid", email = "davidkpiano@gmail.com" },
]
maintainers = [
    { name = "Jovani Pink", email = "jovanipink1@gmail.com" },
]
keywords = [
    "state machine",
    "statechart",
    "finite state machine",
    "fsm",
    "xstate",
    "scxml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
# Js2Py powers SCXML `cond` (JavaScript) evaluation only. It is optional so the
# core library installs and imports cleanly on modern Python.
# TODO(0.2.0): replace with a pure-Python SCXML condition evaluator.
scxml = ["Js2Py>=0.71"]

[project.urls]
homepage = "https://github.com/JovaniPink/xstate-python"
repository = "https://github.com/JovaniPink/xstate-python"

[tool.poetry]
packages = [
    { include = "xstate" },
]
include = [
    { path = "xstate/py.typed", format = ["sdist", "wheel"] },
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^24.0"
isort = "^5.12"
flake8 = "^7.0"
mypy = "^1.0"

[tool.isort]
profile = "black"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

# Js2Py is an optional extra with no type stubs; it is lazy-imported inside
# scxml.py and never required by the core library.
[[tool.mypy.overrides]]
module = "js2py"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["xstate"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError"
]
fail_under = 50
show_missing = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
