[project]
name = "xstate"
version = "0.7.0"
description = "Statecharts and state machines for Python, inspired by XState."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "David Khourshid", email = "davidkpiano@gmail.com" },
]
maintainers = [
    { name = "Jovani Pink", email = "jovanipink1@gmail.com" },
]
keywords = [
    "state machine",
    "statechart",
    "finite state machine",
    "fsm",
    "xstate",
    "scxml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.optional-dependencies]
# SCXML import is dependency-free on modern Python. JavaScript-style `cond`
# support intentionally covers a small safe boolean subset in xstate.scxml.
scxml = []

[project.urls]
homepage = "https://github.com/JovaniPink/xstate-python"
repository = "https://github.com/JovaniPink/xstate-python"

[tool.poetry]
packages = [
    { include = "xstate", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4"
pytest-asyncio = ">=1.0"
pytest-cov = ">=4.0"
ruff = ">=0.4"
mypy = "^1.0"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "SIM", "C4"]
ignore = [
    "A002",   # shadowing builtins in function args (type=, id=) — matches XState JS API
    "SIM108", # ternary over if/else — less readable in complex guards
]

[tool.ruff.lint.per-file-ignores]
# scxml.py uses ET internals, legacy % format, and `id` as a local variable name
"src/xstate/scxml.py" = ["A001", "UP031"]
# Test helpers use `input` as a lambda param to match XState's `input` semantics
"tests/test_actor_logic.py" = ["A006"]
"tests/test_actor_messaging.py" = ["A006"]
"tests/test_async_actors.py" = ["A006"]
"tests/test_invoke.py" = ["A006"]

[tool.ruff.lint.isort]
known-first-party = ["xstate"]

[tool.mypy]
mypy_path = "src"
python_version = "3.13"
# Strict checks enforced on the public surface (event.py, state.py, machine.py,
# exceptions.py). Internal algorithm/actor/interpreter complexity is covered
# progressively via the per-module overrides below.
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
no_implicit_reexport = true

# algorithm.py implements W3C SCXML; internal control-flow helpers still use
# loose signatures while the parsed config boundary is now typed separately.
[[tool.mypy.overrides]]
module = "xstate.algorithm"
disallow_untyped_defs = false


[tool.pytest.ini_options]
minversion = "8.4"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "scxml_ci: stable SCXML conformance subset run in GitHub Actions",
]
# `async def test_*` are collected and run without a per-test decorator.
asyncio_mode = "auto"

[tool.coverage.run]
source = ["xstate"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError"
]
fail_under = 50
show_missing = true

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
